assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Playfair+Display&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');

*{
    margin: 0;
    padding: 0;
    border: none;
}

body{
    font-family: Playfair Display, sans-serif;
    font-weight: 300;
    color: #2b302c;
    padding: 0;
    margin: 0;
}

h1, h2{
    font-family: Montserrat, sans-serif;
    font-weight: 300;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #0f100f;
}

#logo{
    float: left;
    font-size: 300%;
    border-bottom: #0f100f;
}

#menu{
    font-size: 100%;
    letter-spacing: 2px;
}

/* stops navigation heading form aligning vertically*/
#menu li{
    display: inline-block;
    margin-right: 40px;
    list-style-type: none;
    
}

/* allows navigation headings to align to the right*/
#menu ul{
    text-align: right;
}

#menu, #logo{
    line-height: 55px;
}

#menu a{
   text-decoration: none;
   color: #0f100f;
   font-family: Montserrat, sans-serif;
}

#menu a:hover{
    border-bottom: 1px solid #0f100f;
}

.active{
    border-bottom: 1px solid #0f100f;
}

#hero-outer{
   
    height: 500px;
    width: 100%;
    overflow: hidden;
    position: relative;
}

#hero-image{
  
    height: 500px;
    width: auto;
    object-fit: cover;
    background: url(../images/earth-1151659__340.webp) no-repeat center center;
    background-size: cover;
    border: 2px solid white;
    padding: 20px 20px 20px 20px;
    /*animation-zoom*/
    animation-name: hero-zoom;
    animation-duration: 3s;
    animation-fill-mode: forwards;
}

#hero-image h1{
    color: #fff;
    text-align: center;
    font-size: 300%;
    font-family: Dancing Script, sans-serif;   
}

@keyframes hero-zoom {
    from{
        transform: scale(1);
    }
    to{
        transform: scale(1.05);
    }
}

.slide-1, .slide-2, .slide-3{
    color: #fff;
    font-size: 200%;
    padding: 100px 100px 100px 100px;
    font-family: Courgette, sans-serif;
    position: absolute;
    display: block;
    top: 2em;
    width: 40%;
    animation-duration: 25s;
    animation-timing-function: ease-in-out;
    animation-iteration-count: infinite;
}

.slide-1{
    animation-name: anim-1;
}

.slide-2{
    animation-name: anim-2;
}

.slide-3{
    animation-name: anim-3;
}

@keyframes anim-1{
    0%, 8.3% {left:-100%; opacity: 0;}
    8.3%, 25% {left: 25%; opacity: 1;}
    66.66%, 100% {left: 110%; opacity: 0;}
}

@keyframes anim-2{
    0%, 33.33% {left:-100%; opacity: 0;}
    41.63%, 58.29% {left: 25%; opacity: 1;}
    66.66%, 100% {left: 110%; opacity: 0;}
}

@keyframes anim-3{
    0%, 66.66% {left:-100%; opacity: 0;}
    74.96%, 91.62%{left: 25%; opacity: 1;}
    100%{left: 110%; opacity: 0;}
}

#about-club{
    text-align: center;
    height: 500px;
    padding-top: 50px;
    margin-top: 10px;
    margin-bottom: 10px;
    margin-left: auto;
    margin-right: auto;
    background-color: grey;
    color: black;
   
}

.why-join-top{
    padding-top: 30px;
    padding-bottom: 60px;
    width: 50%;
    margin: 0 auto; 
}



.why-stay-middle{
    padding-top: 60px;
    width: 50%;
    margin: 0 auto;
} 

hr {
    border-top: 1px solid #3a3a3a;
    width: 100%;
    margin: 5px 0;
}

#times{
    background-image: url(../images/times.jpg);
    width: 100%;
    overflow: hidden;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    
}

#times div{
    color: #fff;
    background-color: rgba(0,0,0,.6);
    width: 25%;
    height: 200px;
    float: left;
    padding: 20px 20px 20px 10px;
    text-align: center;
    border: 2px solid white;
    box-sizing: border-box;
}

#times h2{
    color: #fff;
}

.social-net{
    text-align: center;
}

.social-net li{
    display: inline;
}

.social-net i{
    font-size: 120%;
    margin: 2%;
    padding: 2%;
    color: darkslategray;
}

#meteor{
    background-image: url(../images/meteor-rain-night-sky-neon-space-illustration_33099-1866.jpg);
    height: 300px;
    width: 100%;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    margin: 10px  10px  10px  10px;
    color: #fff;
}

#photo-comp{
    background-image: url(../images/orion-nebula-11107_960_720.webp);
    height: 300px;
    width: 100%;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    margin: 10px  10px  10px  10px;
    color: #fff;
}

#meteor h2{
    color: #fff;
}

#photo-comp h2{
    color: #fff;
}

.form-section{
    clear: left;
    background-image: url(../images/vintage-binocular-lens_1203-7776.jpg);
    background-size: cover;
    background-position: center;
    height: 900px;  
}

.signup-form{
    color: #fafafa;
    margin: 175px 10% 0 0;
    background-color: rgba(60, 60, 60, 0.7);
    padding: 40px;
    left: 15%;
    max-width: 400px;
    position: absolute;
}

.signup-form  h2{
    color: #fafafa;
    margin-bottom: 30px;
}

.text-input{
    background: transparent;
    color: #fafafa;
    width: 100%;
    height: 35px;
    margin: 10px 10px 10px 10px;
    border: 2px solid #3a3a3a;
    border-radius: 2px;
}

.text-input:hover{
    border-color: palevioletred;
}

.join-button{
    margin-top: 20px;
    border-radius: 2px;
    padding: 5px 10px 5px 10px;
    text-align: center;
    font-size: 75%;
    background-color: #fafafa;
    color: #3a3a3a;
    display: block;
}

.join-button:hover{
    background-color: #3a3a3a;
    color: palevioletred;
}

#picture{
    clear: both;
    line-height: 0;
    column-count: 4;
    column-gap: 2px; 
}

#picture > img{
    width: 100%;
    margin-bottom: 2px;
}

@media screen and(max-width:1200px) {
    #about-club{
        width: 100%;
        max-height: 50px;
        
        display: inline-block;
    }

    .why-join-top, .why-stay-middle{
        max-width: 100%;
        padding: 0;
        float: left;
        clear: both;
    }
    
    #times > div{
        max-width: 100%;
        clear: both;
        height: 100px;
        padding: 0;
    }

    hr{
        display: none;
    }
}

@media screen and (max-width: 950px){
    #menu{
        clear: left;
        float: left;
        margin-left: 30px;
        margin-bottom: 20px;
        line-height: 25px;
        font-size: small;
    }
    #menu li{
        display: inline-block;
        margin-right: .5em;
        list-style-type: none;
    }
    #menu ul{
        text-align: left;
    }

    .slide-1, .slide-2, .slide-3{
        font-size: 150%;
        padding-left: 20px;
        padding-right: 20px;
        animation-timing-function: ease-in-out;
        
    }
    .slide-1{
        animation-timing-function: ease-out;
        padding-top: 150px;
    }
    .slide-2{
        animation-timing-function: ease-in;
        
    }

    #about-club{
        width: 100%;
        /* margin: 0 auto; */
    }

    .why-join-top, .why-stay-middle{
        width: inherit;
    }

    .why-join-top h3, .why-stay-middle h3{
        width: 100%;
        text-align: center;
    }

    .why-join-top p, .why-stay-middle p{
        text-align: center;
        padding: 10px auto;
    }
    #times{
        vertical-align: middle;
    }
}

@media screen and (max-width: 800px){
    #photos{
        column-count: 2;
    }
}
    

